# hotel_booking_fastAPI

./: .env  .gitignore  README.md  alembic.ini  pyproject.toml  run_db.bat
app/: config.py  database.py  main.py
app/booking/: models.py  router.py
app/hotels/: models.py
app/megration/: env.py
app/megration/versions/: d1f1bad7d8c6_user_booking_rooms.py  f6b436858ff3_inition_migration.py
app/users/: models.py
