[tool.poetry]
name = "app"
version = "0.0.1"
description = "Сервис бронированиея отеля"
authors = ["Шумелев Дмитрий <cmit.dima@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.19"
alembic = "^1.11.1"
asyncpg = "^0.28.0"
pydantic = "^2.0.2"
pydantic-settings = "^2.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
dev = "app.main:start"
